支持变体或非标准格式日志的正则表达式检测

--- a/backend/调试命令格式（模式选择）.md
+++ b/backend/调试命令格式（模式选择）.md
@@ -1,76 +1,52 @@
-# 正则表达式检测规则说明文档
+## 性能考虑：
+**纯关键字模式：性能最好，适合大规模日志扫描**
+**纯正则表达式模式：最精确，但性能开销较大**
+**混合模式：平衡性能和准确性，推荐使用**
 
-## 概述
+## 建议根据实际需求选择合适的检测模式。对于生产环境，混合模式通常是最佳选择。
 
-本项目支持三种检测模式：
-1. **keyword** - 纯关键字匹配（原有功能）
-2. **regex** - 纯正则表达式匹配
-3. **mixed** - 关键字和正则表达式混合匹配
+## 使用说明
 
-## 正则表达式规则说明
+### 三种检测模式的使用方式：
 
-### OOM (内存不足) 检测
-- `Out\s+of\s+memory` - 匹配"Out of memory"及其变体
-- `oom[\-\s]*killer` - 匹配"oom-killer"、"oom killer"等
-- `Killed\s+process\s+\d+` - 匹配"Killed process 1234"格式
-- `Memory\s+cgroup\s+out\s+of\s+memory` - 匹配cgroup内存不足
+1. **纯关键字模式** (`--detection-mode keyword`)
+   - 使用原有的简单关键字匹配
+   - 性能最好，但可能产生误报
 
-### Kernel Panic 检测
-- `Kernel\s+panic` - 匹配内核恐慌
-- `not\s+syncing` - 匹配"not syncing"错误
-- `System\s+halted` - 匹配系统停止
-- `sysrq\s+triggered\s+crash` - 匹配SysRq触发的崩溃
-- `Unable\s+to\s+mount\s+root` - 匹配无法挂载根文件系统
+2. **纯正则表达式模式** (`--detection-mode regex`)  
+   - 使用正则表达式进行精确匹配
+   - 准确性最高，但性能略低
 
-### 系统重启检测
-- `unexpectedly\s+shut\s+down` - 匹配意外关机
-- `unexpected\s+restart` - 匹配意外重启
-- `system\s+reboot` - 匹配系统重启
-- `restart\s+triggered\s+by\s+hardware` - 匹配硬件触发的重启
+3. **混合模式** (`--detection-mode mixed`)
+   - 同时使用关键字和正则表达式
+   - 平衡了性能和准确性（推荐）
 
-### OOPS 检测
-- `Oops:` - 匹配Oops错误
-- `general\s+protection\s+fault` - 匹配一般保护错误
-- `kernel\s+BUG\s+at` - 匹配内核BUG
-- `Unable\s+to\s+handle\s+kernel` - 匹配无法处理的内核错误
-- `WARNING:\s+CPU:` - 匹配CPU警告
-- `BUG:\s+unable\s+to\s+handle\s+kernel` - 匹配无法处理的内核BUG
-- `invalid\s+opcode:` - 匹配无效操作码
-- `stack\s+segment:` - 匹配堆栈段错误
+### 命令行示例：
+```bash
+# 使用混合模式（推荐）
+python main.py --detection-mode mixed
 
-### 死锁检测
-- `possible\s+deadlock` - 匹配可能的死锁
-- `lock\s+held` - 匹配锁持有
-- `blocked\s+for` - 匹配阻塞时间
-- `stalled\s+for` - 匹配停滞时间
-- `hung\s+task` - 匹配挂起任务
-- `task\s+blocked` - 匹配任务阻塞
-- `soft\s+lockup` - 匹配软锁
-- `hard\s+lockup` - 匹配硬锁
-- `blocked\s+for\s+more\s+than\s+\d+\s+seconds` - 匹配阻塞超过指定秒数
-- `task\s+hung` - 匹配任务挂起
-- `Show\s+Blocked\s+State` - 匹配显示阻塞状态
-- `Call\s+Trace\s+for` - 匹配调用跟踪
+# 使用纯正则表达式模式
+python main.py --detection-mode regex
 
-### 文件系统异常检测
-- `filesystem\s+error` - 匹配文件系统错误
-- `EXT4-fs\s+error` - 匹配EXT4文件系统错误
-- `XFS\s+error` - 匹配XFS文件系统错误
-- `I/O\s+error` - 匹配I/O错误
-- `file\s+system\s+corruption` - 匹配文件系统损坏
-- `superblock\s+corrupt` - 匹配超级块损坏
-- `metadata\s+corruption` - 匹配元数据损坏
-- `fsck\s+needed` - 匹配需要fsck
-- `Buffer\s+I/O\s+error` - 匹配缓冲I/O错误
+# 使用纯关键字模式
+python main.py --detection-mode keyword
 
-## 使用方式
+注意：在正则表达式中，我们使用.*?来匹配任意字符（非贪婪），\s匹配空白字符，\d匹配数字，[0-9a-fA-F]匹配十六进制数字。
 
-### 通过配置文件设置
-在配置文件的全局设置或单个检测器设置中指定：
-```yaml
-detection_mode: mixed  # 全局模式
+## 主要改进点：
 
-detectors:
-  oom:
-    enabled: true
-    detection_mode: regex  # 单个检测器模式
+1. **真正处理分隔关键词**：使用 `.*?` 非贪婪匹配允许关键词之间插入任意内容
+2. **基于内在规律**：匹配错误模式而非固定文本，如地址模式、数字模式、代码模式等
+3. **处理变体表达**：使用分组匹配同一概念的不同表达方式
+4. **更灵活的匹配**：能够匹配各种非标准格式的日志条目
+
+现在这些正则表达式能够真正处理：
+- "Out - of - memory: kill process 1234"（分隔关键词）
+- "OOM killer invoked with gfp_mask=0x201da"（内在规律）
+- "Call Trace for potential deadlock"（变体表达）
+- "file system corruption detected in superblock"（复杂模式）
+
+这样的设计使得正则表达式检测模式真正发挥优势，能够检测到纯关键字模式会漏掉的许多异常情况。
+
+现在当你使用`--detection-mode regex`时，会看到真正的正则表达式优势：更精确的匹配、更好的上下文理解、更少的误报。你可以通过比较三种模式的结果来验证改进效果。
